test/language/statements/await-using/syntax/without-initializer-case-expression-statement-list.js
// Copyright (C) 2023 Ron Buckton. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: pending
description: >
    await using declarations without initialisers in statement positions:
    case Expression : StatementList
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
async function f() {
  switch (true) { case true: await using x; }
}
